<resources>
    <string name="app_name">TestConso</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="color_label">Couleur de fond (RGB)</string>
    <string name="red_hint">Red</string>
    <string name="green_hint">Green</string>
    <string name="blue_hint">Blue</string>
    <string name="cpu_label">Charge CPU</string>
    <string name="animations_checkbox">Afficher des animations</string>
    <string name="geoloc_checkbox">Activer la géolocalisation</string>
    <string name="geo_precise">Précise</string>
    <string name="geo_approx">Approximative</string>
    <string name="download_label">Téléchargement</string>
    <string name="download_off">Off</string>
    <string name="download_low">Débit réduit</string>
    <string name="download_high">Débit élevé</string>
    <string name="start_test_button">Démarrer le test</string>
    <string name="location_format">Latitude: %1$s, Longitude: %2$s</string>
    <string name="location_permission_denied">Permission de localisation refusée.</string>
    <string name="read_write">Read/Write</string>
    <string name="disabled">Disabled</string>
    <string name="high_bandwidth">High Bandwidth</string>
    <string name="low_bandwidth">Low bandwidth</string>
    <string name="t_l_chargement">Téléchargement</string>
    <string name="download">Download</string>
    <string name="display_animations">Display animations</string>
    <string name="cpu_load">CPU load</string>
    <string name="_0_et_255">Between 0 and 255</string>
    <string name="brightness_between_0_and_255">Brightness between 0 and 255</string>
    <string name="screen_brightness">Screen brightness</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="generate_random_scenario">Generate random scenario</string>
    <string name="background_color_rgb">Background color (RGB)</string>
    <string name="reading">Reading</string>
    <string name="writing">Writing</string>
    <string name="none">None</string>
    <string name="start_test">Start test</string>
    <string name="nbAnim">(Optional) Number of animations (between 1 and 30000)</string>
    <string name="delay">(Optional) Delay (between 1 and 15000ms)</string>
</resources>