<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/btnRandom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/generate_random_scenario" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/background_color_rgb"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etRed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="Red Value"
                android:hint="@string/red"
                android:maxLength="3"
                android:inputType="number" />

            <EditText
                android:id="@+id/etGreen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="Green Value"
                android:hint="@string/green"
                android:maxLength="3"
                android:inputType="number" />

            <EditText
                android:id="@+id/etBlue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="Blue value"
                android:hint="@string/blue"
                android:maxLength="3"
                android:inputType="number" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/screen_brightness"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/brightness"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="Between 0 and 255"
                android:contentDescription="@string/brightness_between_0_and_255"
                android:hint="@string/_0_et_255"
                android:inputType="number"
                android:maxLength="3"
                tools:ignore="ContentDescription" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/cpu_load"
            android:textStyle="bold" />
        <Spinner
            android:id="@+id/spinnerCpu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <CheckBox
            android:id="@+id/cbAnimations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/display_animations" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/nbAnimation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="(Optional) Number of animations (between 1 and 30000)"
                android:contentDescription="@string/nbAnim"
                android:hint="@string/nbAnim"
                android:inputType="number"
                android:maxLength="5"
                tools:ignore="ContentDescription" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/download"
            android:textStyle="bold" />
        <RadioGroup
            android:id="@+id/rgDownload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rbDownloadLow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low_bandwidth" />
            <RadioButton
                android:id="@+id/rbDownloadHigh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high_bandwidth" />
            <RadioButton
                android:id="@+id/rbDownloadNone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disabled" />
        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/bandwith"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="Delay"
                android:contentDescription="@string/delay"
                android:hint="@string/delay"
                android:inputType="number"
                android:maxLength="5"
                tools:ignore="ContentDescription" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/read_write"
            android:textStyle="bold" />
        <RadioGroup
            android:id="@+id/rgIO"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rbRead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reading" />
            <RadioButton
                android:id="@+id/rbWrite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/writing" />
            <RadioButton
                android:id="@+id/rbIONone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none" />
        </RadioGroup>
        <Button
            android:id="@+id/btnStartTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/start_test" />
    </LinearLayout>
</ScrollView>
